--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,11 @@
-comf v0.1.6 (Release date: 2016-09-15)
+comf v0.1.6 (Release date: 2016-09-28)
 ==============
 
 Changes:
 
 * Updated callibration table from ASHRAE 55-2013 for SET
+* Updated adjustment of met for ePMV and PTSe
+* Added callibration table from ISO 7730 Appendix E for PMV and PPD
 
 comf v0.1.5 (Release date: 2016-09-13)
 ==============
