--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+comf v0.1.7 (Release date: 2017-XX-XX)
+==============
+
+Changes:
+
+* to be written
+
+
+
 comf v0.1.6 (Release date: 2016-09-28)
 ==============
 
