--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ comf v0.1.10 (Release date: 2021-02-16)
 Changes:
 
 * documentation implemented via roxygen
-* added new function to calculate UTCI, solar gains
+* added new functions to calculate UTCI, solar gains, cooling effect
 * minor adjustments to comments
 
 comf v0.1.9 (Release date: 2019-04-11)
