deleted unused files

--- a/vignettes/R_packages-comf.ltx
+++ b/vignettes/R_packages-comf.ltx
@@ -17,25 +17,25 @@
 \documentclass[11pt]{article} %Definition des Dokumenttypes und der Standardschriftgroesse
 \usepackage{geometry}	%Definition der Seitenraender
 \geometry{a4paper, left=3cm, right=2cm, top=2cm, bottom=2.5cm,}
-\usepackage[latin1]{inputenc} %Lade Paket mit deutschen Umlauten
+%\usepackage[latin1]{inputenc} %Lade Paket mit deutschen Umlauten
 %\usepackage[utf8]{inputenc} 
-\usepackage{graphicx}
-\usepackage{verbatim} % Paket fuer mehrzeilige Kommentare (\begin{comment} ... \end{comment})
-\usepackage{multirow}
-\usepackage{color}
+%\usepackage{graphicx}
+%\usepackage{verbatim} % Paket fuer mehrzeilige Kommentare (\begin{comment} ... \end{comment})
+%\usepackage[utf8]{multirow}
+%\usepackage{color}
 %\usepackage[ngerman]{babel}
-\usepackage{placeins}
-\usepackage{listings}
-\usepackage{siunitx}
+%\usepackage[utf8]{placeins}
+%\usepackage[utf8]{listings}
+%\usepackage[utf8]{siunitx}
 \usepackage{xcolor}
-\usepackage[gen]{eurosym}
-\usepackage{float}
-\usepackage{lscape} %Paket zur Aenderung der Seite ins Querformat
-\usepackage{setspace}\usepackage{threeparttable} %Paket fuer Fussnoten in Tabellen
-\usepackage{epstopdf}
-\usepackage{units}
+%\usepackage[utf8]{eurosym}
+%\usepackage{float}
+%\usepackage{lscape} %Paket zur Aenderung der Seite ins Querformat
+%\usepackage[utf8]{setspace}\usepackage{threeparttable} %Paket fuer Fussnoten in Tabellen
+%\usepackage{epstopdf}
+%\usepackage{units}
 %\usepackage{longtable}
-%\usepackage[colorlinks=false, pdfborder={0 0 0}]{hyperref} %Paket um Inhaltsverzeichnis und Verweise zu verlinken
+%\usepackage[colorlinks=false, pdfborder={0 0 0}]{hyperref} 
 
 \let\oldv\verbatim
 \let\oldendv\endverbatim
@@ -48,7 +48,7 @@
 \begin{document}
 
 \maketitle	% Erstellen des Titles mit Autorangaben
-\lstset{keepspaces=true,backgroundcolor = \color{lightgray}, language=R}
+%\lstset{keepspaces=true,backgroundcolor = \color{lightgray}, language=R}
 
 \pagenumbering{arabic}
 
