--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+comf v0.1.11 (Release date: 2022-05-12)
+==============
+
+Changes:
+
+* minor adjustments to LaTeX to correct warnings
+* added new functions to calculate MRTnew and ATHBpmvNew
+* minor adjustments to comments
+
 comf v0.1.10 (Release date: 2021-02-10)
 ==============
 
