--- a/vignettes/R_packages-comf.ltx
+++ b/vignettes/R_packages-comf.ltx
@@ -64,10 +64,10 @@ This document describes the groups of functions included in this package. These 
 \item The evaluation of the performance of one or more comfort indices
 \end{enumerate}
 
-At this stage, 22 indices can be calculated. For a complete list, use:
+At this stage, more than 22 indices can be calculated. For a complete list, use:
 
 \begin{verbatim}
-  install.packages("comf_0.1.10.tar.gz", repos=NULL, type="source")
+  install.packages("comf_0.1.11.tar.gz", repos=NULL, type="source")
   library(comf)
   ?comf
 \end{verbatim}
