--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+comf v0.1.12 (Release date: 2024-01-29)
+==============
+
+Changes:
+
+* added validation function to compare to pythermalcomfort
+* added new functions to calculate MRTnew and ATHBpmvNew
+* minor adjustments to comments
+
 comf v0.1.11 (Release date: 2022-05-12)
 ==============
 
